--- a/src_v2/makefile
+++ b/src_v2/makefile
@@ -1,14 +1,14 @@
 TARGET = lightmp3
 OBJS = prx/supportlib.o \
        players/m3u.o players/pspaudiolib.o players/id3.o players/mp3xing.o players/mp3player.o players/oggplayer.o players/aacplayer.o \
-       players/mp3playerME.o players/aa3playerME.o players/flacplayer.o players/player.o players/equalizer.o \
+       players/mp3playerME.o players/aa3playerME.o players/flacplayer.o players/player.o players/wmaplayerME.o players/equalizer.o \
        system/clock.o system/freeMem.o system/mem64.o miniconv/MiniConv.o system/fat.o system/opendir.o \
        system/exception.o system/brightness.o \
        others/bookmark.o others/audioscrobbler.o others/medialibrary.o others/log.o others/strreplace.o \
        gui/settings.o gui/skinsettings.o gui/languages.o gui/menu.o gui/common.o \
        gui/gui_fileBrowser.o gui/gui_player.o gui/gui_playlistsBrowser.o \
        gui/gui_playlistEditor.o gui/gui_settings.o gui/gui_mediaLibrary.o \
-       main.o
+       cooleyesBridge.o main.o
 
 #To build for custom firmware:
 BUILD_PRX = 1
@@ -28,7 +28,7 @@ LIBDIR =
 LIBS= -lsqlite3 -losl -lpng -lz \
       -lAac -lFLAC -lmad -lvorbisidec \
       -lpsphprm -lpspusb -lpspusbstor -lpspaudio -lpspaudiocodec -lpspkubridge \
-	  -lpspsdk -lpspctrl -lpspumd -lpsprtc -lpsppower -lpspgu -lpspgum -lpspaudiolib -lpspaudio -lpsphttp -lpspssl -lpspwlan -lm -ljpeg
+	  -lpspsdk -lpspctrl -lpspumd -lpsprtc -lpsppower -lpspgu -lpspgum -lpspaudiolib -lpspasfparser -lpspaudio -lpsphttp -lpspssl -lpspwlan -lm -ljpeg
 
 LDFLAGS =
 EXTRA_TARGETS = EBOOT.PBP
