--- a/src_v2/skins/default/skin.cfg
+++ b/src_v2/skins/default/skin.cfg
@@ -17,7 +17,6 @@
 #  ex.
 #STR_FONT_NORMAL_NAME=$skinimage/verdana.oft
 STR_FONT_NORMAL_NAME=flash0:/font/ltn0.pgf
-
 #Applies only to INTRAFONT (this is the value used by oslIntraFontSetStyle * 100):
 FONT_NORMAL_SIZE=50
 
@@ -108,6 +107,8 @@ POS_TIME_LABEL=96,110
 POS_TRACK_LABEL=334,110
 
 POS_TITLE_VALUE=154,35
+TITLE_VALUE_WIDTH=320
+
 POS_ARTIST_VALUE=154,50
 POS_ALBUM_VALUE=154,65
 POS_GENRE_VALUE=154,80
