--- a/src_v2/makefile
+++ b/src_v2/makefile
@@ -2,7 +2,7 @@ TARGET = lightmp3
 OBJS = prx/supportlib.o \
        players/m3u.o players/pspaudiolib.o players/id3.o players/mp3xing.o players/mp3player.o players/oggplayer.o players/aacplayer.o \
        players/mp3playerME.o players/aa3playerME.o players/flacplayer.o players/player.o players/wma_tag.o players/wmaplayerME.o players/equalizer.o \
-       system/clock.o system/freeMem.o system/mem64.o miniconv/MiniConv.o system/fat.o system/opendir.o \
+       system/clock.o system/mem64.o miniconv/MiniConv.o system/fat.o system/opendir.o \
        system/exception.o system/brightness.o \
        others/bookmark.o others/audioscrobbler.o others/medialibrary.o others/log.o others/strreplace.o \
        gui/settings.o gui/skinsettings.o gui/languages.o gui/menu.o gui/common.o \
@@ -26,9 +26,9 @@ LIBDIR =
 #LIBS for libtremor : -lvorbisidec
 
 LIBS= -lsqlite3 -losl -lpng -lz \
-      -lAac -lFLAC -lmad -lvorbisidec \
+      -lFLAC -lmad -lvorbisidec \
       -lpsphprm -lpspusb -lpspusbstor -lpspaudio -lpspaudiocodec -lpspkubridge \
-	  -lpspsdk -lpspctrl -lpspumd -lpsprtc -lpsppower -lpspgu -lpspgum -lpspaudiolib -lpspasfparser -lpspaudio -lpsphttp -lpspssl -lpspwlan -lm -ljpeg
+	  -lpspsdk -lpspctrl -lpspumd -lpsprtc -lpsppower -lpspgu -lpspgum -lpspaudiolib -lpspasfparser -lpspaudio -lpspmpeg -lpsphttp -lpspssl -lpspwlan -lm -ljpeg
 
 LDFLAGS =
 EXTRA_TARGETS = EBOOT.PBP
